# 3-phase-muino-sensor

./: .gitignore  CMakePresets.json  README.md
2.raspberry-pi-2.3.4/: main.py  veml6030.py
3.RPI-Pico/: CMakeLists.txt  README.md  main.cpp  pico_sdk_import.cmake
3.RPI-Pico/src/: main.cpp  muinowatersensor.h
5.ESP32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
5.ESP32/i2c/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  troep.c
5.ESP32/i2c/main/: CMakeLists.txt  bmp180_defs.h  sensor_defs.h  ulp_riscv_rtc_i2c_example_main.c  ulp_watermeter_main.c
5.ESP32/i2c/main/ulp/: main.c
5.ESP32/main/: CMakeLists.txt  own_mqtt_client.h  sensor_defs.h  ulp_watermeter_main.c
5.ESP32/main/ulp/: main.c
ESPHome/components/muino_3phase/: __init__.py  muino_3phase_sensor.cpp
esphome/: .gitignore  example.yaml  muino_3phase_sensor.yaml
esphome/components/muino_3phase/: muino_3phase_sensor.h  sensor.py
esphome/components/muino_3phase_i2c/: __init__.py  muino_3phase_i2c.cpp  muino_3phase_i2c.h  sensor.py  sensor_defs.h
